# api_circuits

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile_M1.dockerfile  build.rs
.github/workflows/: rust.yml
lib_circuits_wrapper/: CMakeLists.txt  Cargo.toml  build.rs
lib_circuits_wrapper/src/: CMakeLists.txt  lib.rs  rust_wrapper.cpp  rust_wrapper.h
src/: circuits_routes.rs  lib.rs  main.rs
tests/: circuit_gen_endpoint_test.rs  foreign_ipfs.rs
tests/data/: adder.v
